css/home.css
/*
CSS stylesheet for index.html

box shadow property: horizontal vertical blur spread color inset
*/

body {
    font-family: "Roboto", Helvetica, Arial, sans-serif;
    font-weight: 300;
    background-color: #f2f2f2;
    margin: 0;
    padding: 0;
    height: 100%;
    width: 100%;
}

p, button {
    font-size: 11pt;
}

.header-container {
    width: 100%;
    position: fixed;
    display: block;
    top: 0px;
    z-index: 1;
}

.header {
    background-color: #ffffff;
    color: black;
    font-weight: 400;
    margin: 0 auto 0 auto;
    padding-top: 1%;
    height: 50px;
    text-align: center;
    text-transform: uppercase;
    border-bottom: 3px solid #ff0000;
    box-shadow: 0px 0px 8px 0px #444444;
    display: block;
}

.header h1 {
    top: -10px;
    position: relative;
}

.header h1:hover {
    cursor: pointer;
    color: #ff0000;
}

.links {
    list-style-type: none;
    font-size: 10pt;
    text-align: center;
    top: -3px;
    position: relative;
}

.link a {
    color: black;
    text-decoration: none;
    top: -3px;
    position: relative;
}

.link a:hover {
    color: red;
}

.link a:visited {
    color: black;
}

.link a:visited:hover {
    color: red;
}

.bio-summary {
    background-color: white;
    padding: 0;
    display: block;
    margin-top: 108px;
    margin-left: auto;
    margin-right: auto;
    border-radius: 2.5px;
    border-bottom: 3px solid #000000;
    box-shadow: 0px 0px 3px -1px #444444;
    z-index: 0;
}

.bio-content {
    margin: 1% 1% 1% 1%;
    padding: 2% 1% 1% 1%;
}

.bio-content a {
    color: #ff0000;
    text-decoration: none;
}

.bio-content a:visited {
    color: #ff0000;
    text-decoration: none;
}

.projects-button-container {
    width: 100%;
    text-align: center;
    height: 100%;
    z-index: 0;
}

.projects-button {
    border: 2px solid #ff0000;
    border-radius: 2.5px;
    background-color: #ffffff;
    margin: 20px auto 20px auto;
    text-transform: uppercase;
    padding: .7em;
    color: #ff0000;
    cursor: pointer;
    box-shadow: 0px 2px 4px -2px #444444;
}

.body {
    width: 100%;
    text-align: center;
    margin-top: 50px;
    margin-left: auto;
    margin-right: auto;
    margin-bottom: -15px;
    z-index: 0;
}

.body>h3 {
    text-transform: uppercase;
}

.body-title {
    width: 84%;
    text-align: left;
    margin-left: 8%;
    border-radius: 2.5px;
    border-bottom: 3px solid red;
}

.body-element {
    margin: 0;
    padding: 0;
    height: 200px;
    background-color: white;
    vertical-align: top;
    border-radius: 2.5px;
    border-bottom: 3px solid #000000;
    box-shadow: 0px 0px 3px -1px #444444;
}

.project-title {
    text-align: left;
    margin: 1% 1% 1% 1%;
}

.project-content {
    text-align: left;
    height: 150px;
    margin: 1% 1% 1% 1%;
}

.footer, .push {
    margin: 0;
    padding: 0;
    width: 100%;
    background-color: #333333;
    text-align: center;
    height: 15px;
    z-index: 1;
}

.footer-content {
    color: #777777;
    font-size: 8pt;
    top: -5px;
    position: relative;
}

.footer-content a {
    color: #777777;
    font-size: 8pt;
    font-weight: normal;
}

.footer-content a:visited {
    color: #777777;
    font-size: 8pt;
    font-weight: normal;
}

@media screen and (min-width: 1200px) {
    .header h1 {
        text-align: left;
        float: left;
        left: 20px;
        margin-right: 30%;
        display: block;
    }

    .links {
        text-align: right;
        display: block;
        float: right;
        width: 40%;
        padding-top: 19px;
    }

    .body-element {
        width: 40%;
        margin: 2%;
        display: inline-block;
    }

    .link {
        display: inline;
        margin: 0% 2% 0% 2%;
        padding: 0.5% 2% 0.5% 2%;
    }

    .bio-summary {
        width: 85%;
        text-align: center;
    }
}

@media screen and (min-width: 768px) and (max-width: 1200px) {
    .header {
        height: 92px;
    }

    .links {
        left: -5%;
    }

    .link {
        display: inline;
        margin: 0;
        padding: 0.5% 2% 0.5% 2%;
    }

    .body-element {
        width: 40%;
        margin: 2%;
        display: inline-block;
    }

    .bio-summary {
        width: 95%;
        margin-top: 150px;
        text-align: center;
    }

    .body {
        margin-top: 50px;
    }
}

/* can use min-width and max-width in same query */

@media screen and (max-width: 768px) {
    .header {
        height: 92px;
    }

    .links {
        left: -12.5%;
        width: 100%;
    }

    .link {
        display: inline;
        margin: 0;
        padding: 0.5% 1% 0.5% 1%;
    }

    .body-element {
        width: 95%;
        margin: 2%;
        display: block;
    }

    .bio-summary {
        width: 95%;
        margin-top: 150px;
        text-align: center;
    }

    .body {
        margin-top: 50px;
    }
}

